--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "url": "git+https://github.com/Makedon-KIEV/goit-js-11.git"
   },
   "keywords": [],
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
+  "author": " ;) ",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Makedon-KIEV/goit-js-11/issues"
